# RTB_engine

./: .gitignore  CMakeLists.txt  Claude.md  test_arena  test_bid_request  test_features
docs/: tests.md
include/: ArenaAllocator.hpp  BidCalculator.hpp  BidRequest.hpp  BudgetManager.hpp  FTRLModel.hpp  FeatureExtractor.hpp  FloorGate.hpp  tempCodeRunnerFile.hpp
src/: ArenaAllocator.cpp  BidCalculator.cpp  BidRequest.cpp  BudgetManager.cpp  FTRLModel.cpp  FeatureExtractor.cpp  FloorGate.cpp
tests/: test_arena_allocator.cpp  test_bid_calculator.cpp  test_bid_request.cpp  test_budget_manager.cpp  test_feature_extractor.cpp  test_floorgate.cpp  test_ftrl_model.cpp
